# i2c_hangs_min_example

./: Cargo.toml
src/: main.rs
