[package]
name = "min_example_i2c_write_hang"
version = "0.2.0"
rust-version = "1.78"
edition = "2021"
license = "GPLv3"
authors = ["David Kleingeld"]

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [ "defmt", "stm32f401cc",
"unstable-pac", "memory-x", "time-driver-tim1", "time", "exti" ]  }
embassy-net = { version = "0.4.0", features = ["defmt", "proto-ipv4", "tcp", "dhcpv4","medium-ethernet"] }
embassy-net-wiznet = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.6.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = ["arch-cortex-m",
"executor-thread", "defmt", "integrated-timers", "executor-interrupt"] }
embassy-embedded-hal = { version = "0.1.0" }
embassy-time = { version = "0.3.0", features = ["defmt", "defmt-timestamp-uptime", "tick-hz-32_768"] }
embassy-futures = { version = "0.1.0"}

defmt = "0.3"
defmt-rtt = "0.4"

cortex-m = { version = "0.7.6", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.0"
embedded-hal = "1.0.0"
embedded-hal-async = "1.0"
embedded-hal-bus = { version = "0.2", features = ["async", "defmt-03"] }
embedded-io-async = { version = "0.6.1", features = ["defmt-03"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
futures = { version = "0.3.17", default-features = false, features = ["async-await"] }
heapless = { version = "0.8", default-features = false }
static_cell = "2.0.0"

[patch.crates-io]
embassy-stm32 = {path = "../../Documents/embassy/embassy-stm32" }
embassy-net = {path = "../../Documents/embassy/embassy-net" }
embassy-net-wiznet = {path = "../../Documents/embassy/embassy-net-wiznet" }
embassy-sync = {path = "../../Documents/embassy/embassy-sync" }
embassy-executor = {path = "../../Documents/embassy/embassy-executor" }
embassy-embedded-hal = {path = "../../Documents/embassy/embassy-embedded-hal" }
embassy-time = {path = "../../Documents/embassy/embassy-time" }
embassy-futures = {path = "../../Documents/embassy/embassy-futures" }

[profile.dev]
opt-level = 0

[profile.release]
lto = false
opt-level = 1
incremental = true
codegen-units = 255
# note: debug = true is okay - debuginfo isn't flashed to the device!
debug = true
